refactoring usando arquitectura hexagonal, se agrega readme
