# cmd/main.go
@@ -8,10 +8,11 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"github.com/ultra-hattrick/players-back/controller"
-	"github.com/ultra-hattrick/players-back/model"
-	"github.com/ultra-hattrick/players-back/repositories"
-	"github.com/ultra-hattrick/players-back/service"
+	_ "github.com/ultra-hattrick/players-back/docs"
+	playersHttp "github.com/ultra-hattrick/players-back/internal/adapters/handler/http"
+	"github.com/ultra-hattrick/players-back/internal/adapters/repository/postgres"
+	"github.com/ultra-hattrick/players-back/internal/core/domain"
+	"github.com/ultra-hattrick/players-back/internal/core/services"
 	"gitlab.com/uchile1/helper/helperDB"
 	"gitlab.com/uchile1/helper/helperLog"
 	"gorm.io/gorm"
@@ -20,7 +21,7 @@ import (
 // @title Players BACK API
 // @version 1.0
 // @description Para obtener los jugadores de los equipos desde Hattick y la base de datos.
-// @host localhost:8080
+// @host localhost:8082
 // @BasePath /api/v1/team/{team_id}/player
 
 func main() {
@@ -35,19 +36,19 @@ func main() {
 		helperLog.Logger.Panic().AnErr("error al crear el esquema!", err)
 	}
 	// AutoMigrate ejecutará las migraciones automáticamente
-	if err := db.AutoMigrate(&model.Player{}); err != nil {
+	if err := db.AutoMigrate(&domain.Player{}); err != nil {
 		helperLog.Logger.Panic().AnErr("error al ejecutar automigrate!", err)
 	}
-	repository := repositories.NewPlayersRepository(db)
-	service := service.NewPlayersService(repository)
-	controller := controller.NewPlayersController(service)
+	repository := postgres.NewPlayersRepository(db)
+	service := services.NewPlayersService(repository)
+	handler := playersHttp.NewPlayersHandler(service)
 	group := r.Group("/api/v1/team/:team_id/player")
-	group.GET("/", controller.GetPlayersByTeamID)
-	group.POST("/", controller.CreatePlayersByTeamID)
-	group.GET("/:player_id", controller.GetPlayersByIDAndTeamID)
-	group.GET("/match/:match_id", controller.FetchPlayersByTeamIDAndMatchID)
-	group.POST("/match/:match_id", controller.GetPlayersByTeamIDAndMatchID)
-	group.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	group.GET("/", handler.GetPlayersByTeamID)
+	group.POST("/", handler.CreatePlayersByTeamID)
+	group.GET("/:player_id", handler.GetPlayersByIDAndTeamID)
+	group.GET("/match/:match_id", handler.FetchPlayersByTeamIDAndMatchID)
+	group.POST("/match/:match_id", handler.GetPlayersByTeamIDAndMatchID)
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	r.GET("/health", func(ctx *gin.Context) {
 		if err := helperDB.HealthheckPostgresHandler(); err != nil {
 			ctx.JSON(http.StatusInternalServerError, fmt.Sprintf("error conectarse a la DB %v", err.Error()))
